# solana-fact-oracle

./: .gitignore  Anchor.toml  Backlog.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
programs/consumer/: Cargo.toml
programs/consumer/src/: lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs  state.rs  test.bkp  utils.rs
programs/oracle/src/instructions/: auditor.rs  feed.rs  license.rs  mod.rs  settings.rs  subscription.rs
tests/: oracle.ts  test.ts
wormhole/: Cargo.toml.disabled
wormhole/src/: context.rs  lib.rs  wormhole.rs
