[package]
name = "oracle"
version = "0.1.0"
description = "Fact Finance Oracle"
edition = "2021"

[lib]
name = "oracle"
crate-type = ["cdylib", "lib"]


[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "*"