[package]
name = "oracle"
version = "0.1.0"
description = "Fact Finance Oracle"
edition = "2021"

[lib]
name = "oracle"
crate-type = ["cdylib", "lib"]


[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-spl/idl-build", "anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "*"

wormhole-raw-vaas = "=0.3.0-alpha.1"